Add JQuery fuctions to show the icon and hide the text when clicked

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,12 @@
 .what-showing2{
     display: none;
 }
+.what-showing3{
+    display: none;
+}
+.what-showing4{
+    display: none;
+}
 
 .folio{
     text-align: center;
