Add hover effect on second row of portfolio section

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,19 +30,28 @@
 }
 #work04{
     display: none;
-
 }
 #work03{
     display: none;
-
 }
 #work02{
     display: none;
-
 }
 #work01{
     display: none;
+}
 
+#work05{
+    display: none;
+}
+#work06{
+    display: none;
+}
+#work07{
+    display: none;
+}
+#work08{
+    display: none;
 }
 .folio{
     text-align: center;
