--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .intro{
     background-image: url("../pics/h_img.jpg");
-    padding: 12%;
+    padding: 10%;
     text-align: center;
     color: white;
 }
@@ -14,6 +14,7 @@
     padding: 4%;
     text-align: center;
     color:white;
+    font-weight: bold;
 }
 .what-hidden{
     text-align: center;
